@@ -222,8 +222,14 @@ Ext.extend(Collections.grid.ContainerCollections,MODx.grid.Grid,{
         var r = {
             resource: this.menu.record.id
             ,is_folder: false
-            ,name: _('duplicate_of',{name: this.menu.record.data.pagetitle})
         };
+
+        if (this.menu.record.data != undefined) {
+            r.name = _('duplicate_of', {name: this.menu.record.data.pagetitle});
+        } else {
+            r.name = _('duplicate_of', {name: this.menu.record.pagetitle});
+        }
+
         var w = MODx.load({
             xtype: 'modx-window-resource-duplicate'
             ,resource: this.menu.record.id
